Fix jumpy embed reload action

--- a/mon-pix/app/styles/components/_challenge-embed-simulator.scss
+++ b/mon-pix/app/styles/components/_challenge-embed-simulator.scss
@@ -78,7 +78,7 @@
   display:flex;
   justify-content: flex-end;
   position:relative;
-  bottom: 6px;
+  top: 26px;
 }
 
 .embed-reboot__content {
